# unraid-array-balancer

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOVER.md  LICENSE  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  disks.py  files.py  health.py  index.py  mover.py  tasks.py
backend/app/models/: __init__.py
backend/app/services/: __init__.py  config.py  database.py  permissions.py
backend/app/utils/: __init__.py
backend/tests/: conftest.py  test_health.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  SAFETY.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: AppHeader.vue  AppSidebar.vue
frontend/src/router/: index.ts
frontend/src/stores/: main.ts
frontend/src/views/: DashboardView.vue  FileBrowserView.vue  SettingsView.vue  TaskQueueView.vue
